Bug 327565 - Libreoffice document with several linked textframes on two pages opened wrong
Summary: Libreoffice document with several linked textframes on two pages opened wrong
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: opendocument (other bugs)
Version First Reported In: 2.8 Pre-Alpha
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-13 15:59 UTC by Martin Tlustos
Modified: 2015-02-06 22:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Testcase with multiple linked frames (100.54 KB, application/vnd.oasis.opendocument.text)
2015-02-02 11:02 UTC, Martin Tlustos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Tlustos 2013-11-13 15:59:06 UTC
I have a brochure made in libreoffice where an A4 document in landscape is divided in three parts with text frames. The document has two pages. When opening the document in words, only one page is displayed, and only the first text frame has text - the other two on page one appear empty.
When opening object properties, only three text frames are shown which means all frames on page two are lost.
Comment 1 Martin Tlustos 2013-11-13 16:00:46 UTC
I can provide the document via email if needed.
Comment 2 Camilla Boemann 2013-11-13 21:35:37 UTC
Yes please  to me cbo@boemann.dk
Comment 3 Camilla Boemann 2013-11-14 09:59:13 UTC
Thanks for sending me the document. I can't promise to fix it soon though. a lot of other stuff to do as well
Comment 4 Martin Tlustos 2013-12-03 10:14:52 UTC
Yes, I can see that there are lots and lots of bug reports that are confirmed... ;-) Looks like understaffed team. I'll try to advertise a bit for you guys...
Comment 5 Camilla Boemann 2015-02-01 02:06:13 UTC
can i ask you to send the document again - i thin we have fixed it but would like t confirm
Comment 6 Martin Tlustos 2015-02-02 11:02:04 UTC
Created attachment 90869 [details]
Testcase with multiple linked frames

See the attached document for a testcase
Comment 7 Martin Tlustos 2015-02-02 11:02:35 UTC
You guys rock, by the way...  ;-) Thanks for all your efforts!
Comment 8 Camilla Boemann 2015-02-02 18:41:12 UTC
Thank you unfortunately it's not completely solved yet - it's in 1st and 3rd textbox but not the middle - will look at it later this week

And thank you
Comment 9 Camilla Boemann 2015-02-02 21:01:26 UTC
Oooh the order of the frames are not linear.

That makes it difficult for us - will have to be clever
Comment 10 Camilla Boemann 2015-02-06 22:48:41 UTC
Git commit e51b004f53a8409784588d351ee21eb67fbc1d27 by C. Boemann.
Committed on 06/02/2015 at 22:14.
Pushed by boemann into branch 'calligra/2.9'.

Fix layout bug that basically put all page anchored shapes refering to pagecontent rect on
the first page even if the shape was supposed to be on any other page

M  +2    -1    words/part/frames/KWFrameLayout.cpp

http://commits.kde.org/calligra/e51b004f53a8409784588d351ee21eb67fbc1d27
Comment 11 Camilla Boemann 2015-02-06 22:48:42 UTC
Git commit eb69a0cb75991db01d33f39dee53928b8930fba9 by C. Boemann.
Committed on 06/02/2015 at 22:17.
Pushed by boemann into branch 'calligra/2.9'.

Fix loading textshapes with flowing text in weird order.
We basically didn't expect such a weird order, but now we do a two step loading,
first recording the order, and only then actually placing the textflow in that order

M  +2    -0    words/part/KWOdfLoader.cpp
M  +32   -26   words/part/KWOdfSharedLoadingData.cpp
M  +4    -1    words/part/KWOdfSharedLoadingData.h

http://commits.kde.org/calligra/eb69a0cb75991db01d33f39dee53928b8930fba9