Fix loading textshapes with flowing text in weird order. We basically didn't expect such a weird order, but now we do a two step loading, first recording the order, and only then actually placing the textflow in that order

BUG: 327565